--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "sass": "^1.49.9",
     "svgo": "^2.8.0",
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "@astrojs/react": "^3.0.3",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "document": "^0.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
